@@ -764,23 +764,23 @@
         <col id="1">0</col>
       </row>
       <row>
-        <col id="0" translatable="yes">Stretch to fill the entire screen</col>
+        <col id="0" translatable="yes">Stretch to fill the entire monitor area</col>
         <col id="1">1</col>
       </row>
       <row>
-        <col id="0" translatable="yes">Stretch to fit the screen</col>
+        <col id="0" translatable="yes">Stretch to fit the monitor area</col>
         <col id="1">2</col>
       </row>
       <row>
-        <col id="0" translatable="yes">Crop to fill the entire screen</col>
+        <col id="0" translatable="yes">Center unscaled image on the monitor</col>
         <col id="1">3</col>
       </row>
       <row>
-        <col id="0" translatable="yes">Center on the screen</col>
+        <col id="0" translatable="yes">Tile the image to fill the entire monitor area</col>
         <col id="1">4</col>
       </row>
       <row>
-        <col id="0" translatable="yes">Tile the image to fill the entire screen</col>
+        <col id="0" translatable="yes">Stretch and crop to fill the monitor area</col>
         <col id="1">5</col>
       </row>
     </data>
